name:                observable-examples
version:             0.5.0.0
synopsis:            Example observable programs.
description:         Example observable programs.
homepage:            http://github.com/jtobin/observable-examples
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
build-type:          Simple
cabal-version:       >= 1.18

library
  ghc-options:       -O2 -Wall
  exposed-modules:
      Observable.Examples
  default-language:    Haskell2010
  build-depends:
      base
    , observable >= 0.5.0.0

